--- a/404.md
+++ b/404.md
@@ -1,4 +1,4 @@
 # Game over
 
-* [Continue](javascript:history.back())
-* [Exit](https://harounatraore.com/)
+* [Continue](javascript:history.back() "go back")
+* [Exit](https://harounatraore.com/ "home")
